[package]
name = "vicarious-raylib"
version = "0.1.0"
authors = ["Alex Nachasic <nachasic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
arr_macro = "0.1.3"
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }